Add mineland.me to the blacklist

--- a/blacklist.jsonc
+++ b/blacklist.jsonc
@@ -7,6 +7,7 @@
   "(.+\\.)*enderoyuncu\\.com", // Breaks Commercial Usage Guidelines
   "(.+\\.)*gevezeoyuncu\\.com", // Breaks Commercial Usage Guidelines
   "(.+\\.)*hiranetwork\\.com", // Breaks Commercial Usage Guidelines
+  "(.+\\.)*mineland\\.me", // Breaks Commercial Usage Guidelines
   "(.+\\.)*provanas\\.com", // Distributes cracked Minecraft, breaks EULA and Commercial Usage Guidelines
   "(.+\\.)*reborncraft\\.pw", // Breaks Commercial Usage Guidelines
   "(.+\\.)*saloonnetwork\\.com" // Distributes cracked Minecraft, breaks EULA and Commercial Usage Guidelines
